www/css/styles.css
@font-face {
    font-family: BitParty;
    src: url('../font/8_bit_party.ttf');
}

@font-face {
    font-family: BitOperator;
    src: url('../font/8bitoperator.ttf');
}


body {
	font-family: BitParty;
	overflow: hidden;
	overflow-x: hidden;
	overflow-y: hidden;
}

.background {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 500;
	background-color: #000000;
	color: #FFFFFF;
}

#backgroundImage {
	transition: src 0.3s ease;
}

.presentation {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 500;
	background-color: #FFFFFF;
	color: #000000;
	display: block;
}

.personagem {
	display: none;
	position: absolute;
	width: 50;
	height: 50;
}

.item {
	display: none;
	position: absolute;
	width: 25;
	height: 25;
}

#barraInfo {
	background-color: #575757;
	position: absolute;
	float: left;
	top: 500px;
	width: 100%;
	height: 100px;
	border-bottom-style: solid;
    border-bottom-width: 5px;
	border-bottom-color:  #2B2B2B;
	padding-top: 5px;
	padding-bottom: 5px;
}

.mostrador {
	font-family: BitOperator;
	font-size: 32px;
	color: #FFF;
	padding-top: 8px;
}

.tituloMostrador {
	font-size: 17px;
	color: #FFD61F;
}

.action {
	font-size: 14px;
	color: #FFD61F;
	padding-top: 5px;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
	font-weight: bold;
	min-width: 20px;
	max-width: 90px;
	float: left;
	position: absolute;

}

.counter1 {
	position: absolute;
	float: left;
	font-size: 14px;
	color: #FFFF00;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
	display: none;
}

#busted {
	position: absolute;
	float: left;
	color: #FFFFFF;
	display: none;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 500px;
}

#timeUp {
	position: absolute;
	float: left;
	color: #FFFFFF;
	display: none;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 500px;
}

.title {
	font-size: 40;
}

.formRanking {
	position: absolute;
	float: left;
	display: none;
	left: 152px;
	top: 295px;
	background-color: #4f4537;
	width: 200px;
	height: 174px;
}

.formRanking .nickname {
	padding-left: 6px;
	padding-top: 6px;
	font-size: 11px;
	color: #FFF;
}

.formRanking .btOk {
	position: absolute;
	float: left;
	width: 50px;
	height: 50px;
	left: 30px;
	top: 98px;
}

.formRanking .btVerRanking {
	position: absolute;
	float: left;
	width: 50px;
	height: 50px;
	left: 105px;
	top: 98px;
	
}

.formRanking .btOk:hover {
	cursor: pointer;
}

.formRanking .btVerRanking:hover {
	cursor: pointer;
}

.formRanking .email {
	padding-left: 6px;
	padding-top: 6px;
	font-size: 11px;
	color: #FFF;
}

.textField {
	border-width: 1px;
	border-color: #000;
	width: 188px;
	height: 18px;
}

#ranking {
	position: absolute;
	float: left;
	top: 0px;
	left: 0px;
	display: none;
	width: 100%;
	height: 500px;
	background-color: #450000;
}

#ranking .title {
	position: absolute;
	float: left;
	top: 9px;
	font-size: 35px;
	color: #FFF;
	width: 100%;
	text-align: center;
}

.lista {
	position: absolute;
	float: left;
	left: 62px;
	top: 71px;
}

.lista .linha {
	width: 380px;
	height: 25px;
	padding-bottom: 4px;
}

.lista .linha .nome {
	float: left;
	font-size: 18px;
	color: #FFF;
}

.lista .linha .pontuacao {
	float: right;
	width: 80px;
	font-size: 18px;
	color: #FFF;
}

.rankingFooter {
	position: absolute;
	float: left;
	font-size: 20px;
	color: #FFF;
	width: 100%;
	top: 453px;
	text-align: center;
	display: none;
}

#rankingLinkButton {
	background-color: #F20B31;
	width: 70%;
	padding: 5px;
	margin-left: auto;
	margin-right: auto;
}

#setas {
	float: left;
	position: absolute;
	padding-left: 8px;
}

#slideLabel {
	float: left;
	position: absolute;
	padding-left: 70px;
	font-size: 18px;
}

#thiefInstruction {
	float: left;
	position: absolute;
	padding-left: 130px;
}

#collectLabel {
	float: left;
	position: absolute;
	padding-left: 270px;
	font-size: 18px;
	width: 105px;
	text-align: center;
}

.bar {
	float: left;
	position: absolute;
	color: #FFD61F;
}

.barBox {
	float: left;
	position: absolute;
}

#items {
	padding-top: 5px;
}

#scoreBar {
	display: none;
}

#loginButton {
	position: absolute;
	float: left;
	top: 407px;
	left: 65px;
	width: 180px;
	height: 55px;
	font-size: 18px;
}

.facebookLoginButton:hover {
	cursor: pointer;
}

#loginStatus {
	position: absolute;
	float: left;
	left: 73px;
	top: 359px;
	font-size: 20px;
}

.buttonWeeklyRanking {
	position: absolute;
	float: left;
	left: 252px;
	top: 404px;
	width: 181px;
	height: 49px;
	text-align: center;
	font-size: 16px;
	padding-top: 7px;
}

.buttonWeeklyRanking:hover {
	cursor: pointer;
}

#resetGame {
	display: none;
}

#barLeft {
	float: left;
	padding-top: 10px;
	position: absolute;
	width: 78%;
}

.barRight {
	float: left;
	padding-left: 78%;
	position: absolute;
}

.barItem {
	float: left;
}

.timeBox {
	float: left;
	position: absolute;
}

